# rustybeagle

./: Cargo.toml  README.md
build_scripts/: build_script.ps1  build_shaders.ps1
shaders/: compiled-pixel-shader.shader  compiled-vertex-shader.shader  learnings.md  pixel.hlsl  vertex.hlsl  vertex_perspective.hlsl
src/: main.rs
